nginx-ing/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-argo-tcb-argocd
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: nginx.hyd-dev.opsmx.net
    http:
      paths:
      - backend:
          service:
            name: nginx-deployment
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nginx.hyd-dev.opsmx.net
    secretName: nginx-ingress
